style.css
* {
    font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
body {
    margin: 0;
    padding: 0;
}

.display {
    display: grid;
    grid-template-rows: 1fr 5fr 1fr;
    background: #FEFAE0;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.6rem;
    height: 70px;
    background-color: #606C38;
    color: white;
    border-radius: 0 0 10px 10px;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
}

.book-list {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    min-height: 620px;
    gap: 9em;
    margin: 3em;
}

.book-card {
    display: flex;
    flex-flow: column;
    text-align: center;
    background-color: #283618;
    color: white;
    border-radius: 12px;
    align-items: center;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
    max-height: 250px;
}
.button-container {
    position: fixed;
    bottom: 20px;
    right: 20px;
}

.card-button-container {
    display: flex;
    justify-content: space-between;
    width: 250px;
}

.read-button {
    padding: 10px;
    width: 100px;
    border: none;
    border-radius: 40px;
    font-size: 1rem;
}

.book-add {
    background: #DDA15E;
    border-radius: 20px;
    border: none;
    height: 100px;
    width: 100px;
    box-shadow: 0px 10px 30px -8px rgba(0,0,0,0.54);
}

.remove-button {
    background-color: #dd5e5e;
    padding: 10px;
    width: 100px;
    border: none;
    border-radius: 40px;
    font-size: 1rem;
}

dialog {
    background-color: #D2CEB8;
    max-width: 400px;
    justify-content: space-around;
    flex-flow: row wrap;
    border-radius: 30px;
    border: none;
    box-shadow: 1px 10px 26px -3px rgba(0,0,0,0.75);
}

dialog::backdrop {
    backdrop-filter: blur(5px);
    background-color: rgba(0, 0, 0, 0.3);
}

.dialog-buttons {
    display: flex;
    justify-content: space-between;
}

dialog:not([open]) {
    display: none;
}

